# project-Fluxvis

./: .gitignore  build_loop.sh  settings.gradle
.github/workflows/: build.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  audio_capture.cpp  audio_capture.h  engine.cpp  engine.h  tpu_inference.cpp  tpu_inference.h  video_decoder.cpp  video_decoder.h  vulkan_renderer.cpp  vulkan_renderer.h
app/src/main/cpp/shaders/: master_shader.glsl
app/src/main/java/com/visualizer/engine/: AudioCaptureService.kt  MainActivity.kt  NativeInterface.kt
app/src/main/java/com/visualizer/engine/ui/: ControlPanel.kt
app/src/main/res/layout/: activity_main.xml
